--- a/packages/stripe/pubspec.yaml
+++ b/packages/stripe/pubspec.yaml
@@ -11,7 +11,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  stripe_android: ^2.2.0
+  stripe_android:
+     git:
+      url: https://github.com/HaniMohamed/flutter_stripe
+      path: packages/stripe_android
   stripe_ios: ^2.2.0
   stripe_platform_interface: ^2.2.0
 dev_dependencies:
