upgrade stripe_android

--- a/packages/stripe/pubspec.yaml
+++ b/packages/stripe/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
      git:
       url: https://github.com/HaniMohamed/flutter_stripe
       path: packages/stripe_android
-      ref: main
+      ref: hani_try_fix_android_bintray_server_down
   stripe_ios: ^2.2.0
   stripe_platform_interface: ^2.2.0
 dev_dependencies:
